# PI-signing-cli

./: .clang-tidy  .env  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  bun.lockb  components.json  hashes.json  hashes.sig  package-lock.json  package.json  svelte.config.js  vite.config.js
cli/: .gitignore  Cargo.toml  abi.json  hashes.json
cli/src/: main.rs
gui/: .nuxtignore  bun.lockb  nuxt.config.ts  package.json  tailwind.config.js
gui/assets/css/: tailwind.css
gui/components/: sidebar.vue
gui/layouts/: dashboard.vue
gui/pages/: index.vue
gui/pages/dashboard/: index.vue
gui/pages/dashboard/verify/: index.vue
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: main.rs
sig_lib/: .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  build.rs  library.cpp  library.h
sig_lib/lib/: lib.zig  library.cpp  library.h
sig_lib/lib/include/: eidErrors.h  eidlib.h  eidlibException.h
sig_lib/src/: abi.json  blockchain.rs  communication.rs  lib.rs  test.rs  util.rs
src/: App.vue  app.css  blockchain.rs  communication.rs  main.rs  test.rs  util.rs
src-tauri/: Cargo.toml  abi.json  tauri.conf.json
src-tauri/src/: main.rs
src/components/: DarkModeSelect.vue
src/lib/components/: sidebar.svelte
src/routes/: +page.svelte
src/routes/dashboard/: +layout.svelte  +page.svelte
src/routes/dashboard/download/: +page.svelte
src/routes/dashboard/verify/: +page.svelte
