[package]
name = "cli_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
cxx = { version = "1.0.119", features = ["c++20"] }
sha2 = "0.10.8"

[build-dependencies]
cxx-build = "1.0.119"