[package]
name = "disa_lib"
version = "1.0.0-alpha.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = { version = "1.0.119", features = ["c++20"] }
futures = "0.3.30"
reqwest = { version = "0.12.3", features = ["json", "multipart", "blocking"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sha2 = "0.10.8"
tar = "0.4.40"
tokio = { version = "1.37.0", features = ["full"] }
web3 = "0.19.0"

[build-dependencies]
cxx-build = "1.0.119"
